# sdl2-9-slice

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
